<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huang.pyy.activity.BasicInformationActivity"
    android:orientation="vertical">
    <include layout="@layout/title_view" android:id="@+id/rl_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/test"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_information"
                android:textColor="@color/text_sec"
                android:padding="8dp"
                android:textSize="14sp"
                android:background="@color/f4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>
            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="请输入真实姓名"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:id="@+id/ll_wchat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wchat"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="请输入微信号"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:id="@+id/ll_address_now"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_now"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/et_address_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="--请选择地址--"
                    android:enabled="false"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_detail"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_address_detail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="请具体到小区门牌号"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>
        <!--紧急联系人1-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_information"
                android:textColor="@color/text_sec"
                android:padding="8dp"
                android:textSize="14sp"
                android:background="@color/f4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>
            <LinearLayout
                android:id="@+id/ll_relation_with_me"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_with_me"
                    android:textColor="@color/text_sec"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/et_relation_with_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--请选择--"
                    android:textColor="@color/text_sec"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:gravity="right"/>
                <!--<EditText-->
                    <!--android:id="@+id/et_relation_with_me"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:gravity="right"-->
                    <!--android:background="@null"-->
                    <!--android:textColorHint="@color/text_sec"-->
                    <!--android:textColor="@color/text_fir"-->
                    <!--android:textSize="16sp"-->
                    <!--android:hint="&#45;&#45;请选择&#45;&#45;"-->
                    <!--android:enabled="false"-->
                    <!--android:focusable="false"-->
                    <!--android:focusableInTouchMode="false"/>-->
            </LinearLayout>
            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:id="@+id/ll_relation_person_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_person_name"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_relation_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="@string/relation_person_name_input"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:id="@+id/ll_relation_person_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_person_phone"
                    android:textColor="@color/text_fir"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_relation_person_phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:background="@null"
                    android:textColorHint="@color/text_sec"
                    android:textSize="16sp"
                    android:hint="@string/relation_person_phone_input"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>
        </LinearLayout>

    </ScrollView>
    <include layout="@layout/button_bottom"/>
</LinearLayout>
